Refactor code to improve formatting and consistency
Refactored class definitions, fields, and methods for better code organization and readability. Adjusted formatting of Javadoc comments, reordered member variables consistently, and replaced some loops with streams. Removed unused or redundant methods, improved enum and record placement, and simplified control flow where applicable.